[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/SpriteSheets/gelcube.png" type="Texture" id=1]
[ext_resource path="res://Scripts/FlyingEnemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8, 6.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "active"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "death"

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8, 6.5 )

[sub_resource type="CircleShape2D" id=7]
radius = 49.0102

[node name="FlyingEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 20
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.5 )
shape = SubResource( 8 )
__meta__ = {
"_editor_description_": "Environment collider"
}

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "active"
anims/RESET = SubResource( 2 )
anims/active = SubResource( 3 )
anims/death = SubResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16
__meta__ = {
"_editor_description_": "Damages the player"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -6 )
shape = SubResource( 9 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 5.68434e-14, 0 )
scale = Vector2( 0.5625, 0.666667 )

[node name="Hurtbox" type="Area2D" parent="." groups=["enemy"]]
position = Vector2( 0, -3 )
collision_layer = 4
__meta__ = {
"_editor_description_": "Gets damage from player"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -3.5 )
shape = SubResource( 10 )

[node name="Detector" type="Area2D" parent="."]
position = Vector2( 0, -11 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( 0, 4 )
shape = SubResource( 7 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
